# docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/auth/change-password": {
+        "/auth/change-password": {
             "post": {
                 "security": [
                     {
@@ -63,7 +63,7 @@
                 }
             }
         },
-        "/login": {
+        "/auth/login": {
             "post": {
                 "description": "使用電子郵件和密碼登入並返回 JWT 令牌",
                 "consumes": [
@@ -109,7 +109,7 @@
                 }
             }
         },
-        "/register": {
+        "/auth/register": {
             "post": {
                 "description": "註冊新使用者並返回 JWT 令牌",
                 "consumes": [
@@ -169,15 +169,15 @@
         "models.ChangePasswordRequest": {
             "type": "object",
             "required": [
-                "new_password",
-                "old_password"
+                "newPassword",
+                "oldPassword"
             ],
             "properties": {
-                "new_password": {
+                "newPassword": {
                     "type": "string",
                     "example": "newpass123"
                 },
-                "old_password": {
+                "oldPassword": {
                     "type": "string",
                     "example": "oldpass123"
                 }
